# ChangeLog for media-video/mplayer-uau
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*mplayer-uau-2.0_rc1 (27 Feb 2011)

  27 Feb 2011; Nikoli <nikoli@lavabit.com> +mplayer-uau-2.0_rc1.ebuild:
  version bump

  16 Feb 2011; Nikoli <nikoli@lavabit.com> mplayer-uau-2.0_beta1.ebuild,
  mplayer-uau-9999.ebuild:
  fix libass dep, cosmetics

*mplayer-uau-2.0_beta1 (15 Feb 2011)

  15 Feb 2011; Nikoli <nikoli@lavabit.com> +mplayer-uau-2.0_beta1.ebuild,
  mplayer-uau-9999.ebuild, metadata.xml:
  add beta1, update live

  01 Feb 2011; Nikoli <nikoli@lavabit.com> mplayer-uau-9999.ebuild:
  upstream removed bz2 and lzo deps

  01 Feb 2011; Nikoli <nikoli@lavabit.com> mplayer-uau-9999.ebuild:
  upstream removed internal tremor and libmpeg2

  01 Feb 2011; Nikoli <nikoli@lavabit.com> mplayer-uau-9999.ebuild:
  upstream removed vidix, zoran, some docs and internal libfaad2

  30 Jan 2011; Nikoli <nikoli@lavabit.com>
  mplayer-uau-1.0_rc4_p20110126.ebuild, mplayer-uau-9999.ebuild:
  sync with portage

*mplayer-uau-1.0_rc4_p20110126 (30 Jan 2011)

  30 Jan 2011; Nikoli <nikoli@lavabit.com>
  +mplayer-uau-1.0_rc4_p20110126.ebuild:
  new snapshot

  25 Jan 2011; Nikoli <nikoli@lavabit.com> mplayer-uau-9999.ebuild:
  fix build, sync with portage

*mplayer-uau-1.0_rc4_p20101220 (25 Dec 2010)

  25 Dec 2010; Nikoli <nikoli@lavabit.com>
  +mplayer-uau-1.0_rc4_p20101220.ebuild:
  new snapshot

  25 Dec 2010; Nikoli <nikoli@lavabit.com> mplayer-uau-9999.ebuild:
  set version in archive

*mplayer-uau-1.0_rc4_p20101126 (06 Dec 2010)

  06 Dec 2010; Nikoli <nikoli@lavabit.com>
  +mplayer-uau-1.0_rc4_p20101126.ebuild:
  add snapshot

  15 Nov 2010; Nikoli <nikoli@lavabit.com> mplayer-uau-9999.ebuild,
  metadata.xml:
  update, sync with mplayer from portage

*mplayer-uau-1.0_rc4_p20100822 (26 Aug 2010)

  26 Aug 2010; Nikoli <nikoli@lavabit.com>
  +mplayer-uau-1.0_rc4_p20100822.ebuild:
  add snapshot
