@@ -7,12 +7,14 @@ DIST mplayer-uau-1.0_rc4_p20101220.tar.xz 7258544 RMD160 c78772012d887fbac00de2b
 DIST mplayer-uau-1.0_rc4_p20110126.tar.xz 7298200 RMD160 483d9fbebd3fbba9377c698f7d59aeef7042f7ce SHA1 9b094460e13e0ec5d18da76662ad7a788c47cd30 SHA256 f29741947ef557ac2164d93260c5d675199cc7d11e1a06e7f6ac0a308fa8a2cb
 DIST mplayer2-2.0-rc1.tar.xz 7253820 RMD160 d8d0f29975b31e824bae0a55782660d08c98e87a SHA1 1780dcbe4c0d692d37932514563a4452e66b7509 SHA256 262b1b5d0919883a838cb58ca4f08fa87896252a609517ba9680d260d8e90bc0
 DIST mplayer2-2.0beta1.tar.xz 7255596 RMD160 0e46907dc4bc74f8fade13a3903f18d180f93c84 SHA1 95ec817bda56464a006bfb809a2edab796ede1ae SHA256 04db7bf482c515f8d01a71d3a6422017139077e576c00045ac3fcb79558ea9ec
+DIST mplayer2-build-2.0-rc2.tar.xz 7217292 RMD160 a9a577ec8808e6f11aa88700c22b4f955d4d6ef8 SHA1 c1d61dab414f670de4bd826a87c398216dcd29a1 SHA256 ed85c5eb249c344342ca3cf150faa1ab9c25d848de6f319949fdbc8926b5a437
 EBUILD mplayer-uau-1.0_rc4_p20100822.ebuild 23583 RMD160 2d0df508d912e7587fe61b816e2ab418f89ea32a SHA1 d7d057ca95276e370de18e61767033922dc559f8 SHA256 a884674e4da716f691ca1443de2e8bdcb0d4a76a7898dfe395095a4ed2c6563f
 EBUILD mplayer-uau-1.0_rc4_p20101126.ebuild 23645 RMD160 64e49ca062db2b32e82944bda06fb26b6be8c7cb SHA1 274ec552e1652eff2a01f124f74774be2042d8d1 SHA256 9952bbfedab8df63547ab0ca0a0df214fa56015297a8ade25aa53955968578dc
 EBUILD mplayer-uau-1.0_rc4_p20101220.ebuild 23441 RMD160 a098eed6bc656e1e15978aa61f5558a126e5c5f0 SHA1 41491e9796ba2d6b963de169a1ea67b1f2e8cae5 SHA256 fc0c1c31eb208d848891e6eb35847022c13b32350910018a0a8147643e73e669
 EBUILD mplayer-uau-1.0_rc4_p20110126.ebuild 23254 RMD160 db5bedfd5fb51699259668ad4c92dcbd5de8087a SHA1 3c8341d18ed310e976b4661ba50e25a35edff461 SHA256 ef49cc0be1d84eb6a77438956d43123c1c9ac1c12a019a4ed89308a1536eb9b7
 EBUILD mplayer-uau-2.0_beta1.ebuild 22299 RMD160 c8c2218a0fd9d604765675e723b19d7f24a9d3ab SHA1 27b2747fdde7505903343804aae1e69c11171c77 SHA256 e60d1e5f1ac15a1ae513577e1f7bb5d080e355259f4c80692f2bc8bf8c243436
 EBUILD mplayer-uau-2.0_rc1.ebuild 22300 RMD160 70f52c57eea26d8e8ada8459d46418ed9c581f91 SHA1 1ece7d02e6b6e9ba7927e8b9eac73b71c8ee7ab2 SHA256 d43b5c108d6e01043dd4fe3878de2128455aeb758fe49333b2af039045fe1652
-EBUILD mplayer-uau-9999.ebuild 22342 RMD160 99b92c143e7bb49da03194b4e8b2744620424383 SHA1 2d645e569c9aaf3270071df75a73b064b6534a3f SHA256 53ad1b8c133f476993594f56f86040ec75819a880673595cdab8e19d8bbd4d78
-MISC ChangeLog 2562 RMD160 6453736a53c102872ce408c9dfcdbb748cdeeca1 SHA1 fa15eb26ffabb4d0a4307eff57c2e88353f0e4ad SHA256 81a15cb7e7d703a8ea33584ff980fe0df6bae8b69f5f9e288e078429c2dced9a
+EBUILD mplayer-uau-2.0_rc2.ebuild 22296 RMD160 6544caaf48bfb7f9d676b68399eef69961826995 SHA1 f69d604f7587929956419ae295c5d124c17706a1 SHA256 1a2084dd6ce1aa4fb6781f053bb3d2c75f5f9e5ca7ebb8960285eb9a94fa3de9
+EBUILD mplayer-uau-9999.ebuild 22320 RMD160 59191ecba81e7c547a0686a6a9676b9b82c010e3 SHA1 fadf55c1f30be19bb7ee7ef963ed884bfdf734d1 SHA256 efd5f4a7b27b53e63a54b4d89df8ec8c6be13bf171568f5cfde7c69d6ec1bc0d
+MISC ChangeLog 2745 RMD160 e50fb9c71f75c073c30ea7f1cfe58689296f1bde SHA1 e743a0fc433432de97a0765e8fef50155ef519a2 SHA256 970020a1ffc6ab571ee093ee5ef152181d3f807426e6c0ccc0c9506e0916c654
 MISC metadata.xml 4858 RMD160 10a74e1afcba1c573e6cb16d32b553c981d8fc1f SHA1 7624093b0e514d8f7dac620071e2bdeec0eb1949 SHA256 eab3c615438c75a8636d34aeddcdefaf781b3d2db0edf01f2a5053ab595f87e5
