@@ -2,6 +2,12 @@
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*mplayer-uau-2.0_rc2 (09 Mar 2011)
+
+  09 Mar 2011; Nikoli <nikoli@lavabit.com> +mplayer-uau-2.0_rc2.ebuild,
+  mplayer-uau-9999.ebuild:
+  internal libdvdcss was removed, version bump
+
 *mplayer-uau-2.0_rc1 (27 Feb 2011)
 
   27 Feb 2011; Nikoli <nikoli@lavabit.com> +mplayer-uau-2.0_rc1.ebuild:
